<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/activityBackground"
        tools:context=".Activity.EquipmentCode.EquipmentCodeActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/equipmentCodeToolbar"
                style="@style/Toolbar"
                android:layoutDirection="ltr"
                app:layout_constraintBottom_toTopOf="@+id/btnBarcodeReader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/equipmentCodeToolbarTitle"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/equipment_code"
                    android:textSize="16sp" />

            </androidx.appcompat.widget.Toolbar>

            <Button
                android:id="@+id/btnBarcodeReader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/all_button_background"
                android:drawableEnd="@drawable/scanner"
                android:text="@string/barcode_reader"
                android:textColor="@color/textPrimary"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/lineBarcode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/equipmentCodeToolbar" />

            <View
                android:id="@+id/lineBarcode"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/imgBarcode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnBarcodeReader" />

            <ImageView
                android:id="@+id/imgBarcode"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="56dp"
                android:src="@drawable/barcode"
                app:layout_constraintBottom_toTopOf="@+id/barcodeConstraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lineBarcode" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/barcodeConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/barcode_constraint_layout_background"
                app:layout_constraintBottom_toTopOf="@+id/tvEquipmentName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgBarcode">

                <EditText
                    android:id="@+id/etBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@null"
                    android:hint="@string/enter_barcode"
                    android:inputType="number"
                    android:padding="4dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:targetApi="o" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvEquipmentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="13sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/btnShowEquipmentDetails"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barcodeConstraintLayout" />

            <Button
                android:id="@+id/btnShowEquipmentDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/all_button_background"
                android:text="@string/show_equipment_details"
                android:textColor="@color/textPrimary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEquipmentName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
